4th-year/compiler-construction/compiler-construction-assignment-1/tests/negative-tests/declaring-variables-using-void.ccl
main
{
    // should produce errors: 

    var number:void;

    number = 5;
}